RESOLVED FIXED60788
REGRESSION (r69790): WebKit2 doesn't prefer plugins in the additional plugins directory
https://bugs.webkit.org/show_bug.cgi?id=60788
Summary REGRESSION (r69790): WebKit2 doesn't prefer plugins in the additional plugins...
Adam Roben (:aroben)
Reported 2011-05-13 12:43:11 PDT
Prior to r69790, WebKit2 would prefer plugins in the additional plugins directory to any other plugins (if two plugins claim the same MIME type). r69760 broke that by making plugins load in an essentially random order.
Attachments
Load plugins in the order they're found (1.97 KB, patch)
2011-05-13 12:46 PDT, Adam Roben (:aroben)
andersca: review+
Adam Roben (:aroben)
Comment 1 2011-05-13 12:46:43 PDT
Created attachment 93494 [details] Load plugins in the order they're found
Anders Carlsson
Comment 2 2011-05-13 12:47:39 PDT
Comment on attachment 93494 [details] Load plugins in the order they're found View in context: https://bugs.webkit.org/attachment.cgi?id=93494&action=review > Source/WebKit2/UIProcess/Plugins/PluginInfoStore.cpp:67 > #if OS(WINDOWS) > -typedef HashSet<String, CaseFoldingHash> PathHashSet; > +typedef ListHashSet<String, 32, CaseFoldingHash> PathHashSet; > #else > -typedef HashSet<String> PathHashSet; > +typedef ListHashSet<String, 32> PathHashSet; > #endif Please add a comment here explaining why wer're using a ListHashSet.
Adam Roben (:aroben)
Comment 3 2011-05-13 12:48:01 PDT
Adam Roben (:aroben)
Comment 4 2011-05-13 12:55:24 PDT
Note You need to log in before you can comment on or make changes to this bug.