Load plugins in the order they're found

Fixes <http://webkit.org/b/60788> <rdar://problem/9435787> REGRESSION (r69790): WebKit2
doesn't prefer plugins in the additional plugins directory

Reviewed by Anders Carlsson.

* UIProcess/Plugins/PluginInfoStore.cpp:
(WebKit::addFromVector):
Changed to use a ListHashSet instead of a HashSet to store the plugin paths.

git-svn-id: svn://svn.chromium.org/blink/trunk@86456 bbb929c8-8fbe-4397-9dbb-9b2b20218538